# PRIVAC-IA

./: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
DataExtraction/: RGPD_Scraper.py  RGPD_VectorDB.py  api.py  executor_api.py  executor_npm_api.py  main.py  pyproject.toml  test_vectorisation.py
DataExtraction/Extractions/: ALL_SANCTIONS_CNIL.csv  ARTICLES_RGPD.csv  REGLEMENT_GENERAL_PROTECTION_DONNEES.csv
app/: globals.css  layout.tsx  page.tsx
components/3D/: AvatarModel.tsx
components/ChatWindow/: ChatWindow.module.css  ChatWindow.tsx
components/icons/: menu.tsx
components/ui/: input.tsx
public/: Robot.glb
rgpd_embeddings_db/: chroma.sqlite3
rgpd_embeddings_db/12c7d29e-207d-4b3c-9bc1-2309011ba602/: index_metadata.pickle
