[project]
name = "dataextraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astroid==3.3.8",
    "beautifulsoup4==4.12.3",
    "black==25.1.0",
    "bs4==0.0.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "dill==0.3.9",
    "fastapi>=0.115.8",
    "flake8==7.1.1",
    "idna==3.10",
    "isort==6.0.0",
    "langchain>=0.3.17",
    "langchain-chroma>=0.2.1",
    "langchain-openai>=0.3.4",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "numpy<2.0.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pycodestyle==2.12.1",
    "pyflakes==3.2.0",
    "pylint==3.3.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "requests==2.32.3",
    "six==1.17.0",
    "soupsieve==2.6",
    "tomlkit==0.13.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
]
